# c-sandbox

./: CMakeLists.txt  README.md  sandwiches_config.h.in
src/: CMakeLists.txt  main.c  sandwich.c  sandwich.h
tests/: CMakeLists.txt  main.c  old_check.c  sandwich_tests.c
